[package]
name = "rtk-lua"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "The Lua engine for Rust Type Kit - query Rust types and produce FFI types"
repository = "https://github.com/reachingforthejack/rtk"
readme = "README.md"

[dependencies]
mlua = { version = "0.10.5", features = ["lua54", "vendored", "send"] }
anyhow = { workspace = true }
rtk-lua-macros = { path = "../rtk-lua-macros", version = "0.1.0" }
