[package]
name = "rtk"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "The CLI for Rust Type Kit - query Rust types and produce FFI types"
repository = "https://github.com/reachingforthejack/rtk"
readme = "../../README.md"

[dependencies]
rtk-lua = { path = "../rtk-lua", version = "0.1.0" }
clap = { version = "4.5.40", features = ["derive"] }
anyhow = { workspace = true }
log = "0.4.27"
env_logger = "0.11.8"
